# LGSF

./: .cdkignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  cdk.json  faces.py  manage.py  output_csv.py  package.json  pyproject.toml  pytest.ini  requirements.txt  sam-template.yaml  samconfig.toml  standing_down.py
.circleci/: config.yml
.github/workflows/: build-csv.yml
cdk/: README.md  app.py
cdk/stacks/: lgsf_stack.py
lambda-layers/DependenciesLayer/: Makefile
lgsf/: __init__.py  path_utils.py  runner.py
lgsf/aws_lambda/: cloudwatch.py  handlers.py  run_log.py  step_function_invoker.py
lgsf/commands/: aws_mixin.py  base.py
lgsf/conf/: __init__.py
lgsf/councillors/: __init__.py  commands.py  exceptions.py  models.py  scrapers.py
lgsf/metadata/: commands.py  models.py  utils.py  validation.py
lgsf/polling_stations/: commands.py  models.py
lgsf/scrapers/: base.py  checks.py  councillors.py  storage.py
lgsf/storage/: __init__.py  backends.py  base.py  codecommit.py  councillor.py  factory.py  filesystem.py  github.py
lgsf/sync/: commands.py
lgsf/templates/: commands.py  helpers.py
lgsf/tests/: test_runner.py
samconfig.toml.d/: ci-development.toml  development.toml
scrapers/: councillors.py
scrapers/ABC-armagh-city-banbridge-and-craigavon/: councillors.py  metadata.json
scrapers/ABD-aberdeenshire/: councillors.py  metadata.json
scrapers/ABE-aberdeen-city/: councillors.py  metadata.json
scrapers/ADU-adur/: councillors.py  metadata.json
scrapers/AGB-argyll-and-bute/: councillors.py  metadata.json  polling_stations.py
scrapers/AGY-isle-of-anglesey/: councillors.py  metadata.json
scrapers/ALL-allerdale/: councillors.py  metadata.json
scrapers/AMB-amber-valley/: councillors.py  councillors.py.backup  metadata.json
scrapers/AND-ards-and-north-down/: councillors.py  metadata.json
(+988 files in other folders)
