[project]
name = "lgsf"
version = "0.0.0"
description = "The Local Government Scraper Framework is a set of tools for scraping UK local government websites"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4==4.13.4",
    "cryptography>=41.0.0",
    "html5lib>=1.1",
    "httpx==0.28.1",
    "lxml>=6.0.1",
    "pyjwt>=2.8.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "requests[security]==2.32.4",
    "retry2==0.9.5",
    "rich==14.0.0",
    "urllib3<2",
]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "pre-commit==4.2.0",
    "pystache==0.6.8",
    "pytest==8.4.1",
    "pytest-blockage==0.2.4",
    "pytest-mypy-plugins==3.2.0",
    "pytest-ruff==0.5",
    "ruff==0.12.0",
]
cdk = [
    "aws-cdk-lib>=2.100.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "aws-cdk-aws-lambda-python-alpha>=2.100.0,<3.0.0",
]

[tool.uv]
package = false
required-version = "==0.8.*"

[tool.pytest.ini_options]
testpaths = ["lgsf", "scrapers"]
norecursedirs = ["cdk.out", "node_modules", ".venv", ".git"]
